Rewrite ore generation as random vein BlockPopulator (stone-only, Y-limited)
Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>